--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="slide" style="background-image: url('assets/sunset_silhouette.jpeg');"></div>
         <div class="slide" style="background-image: url('assets/camp.jpg');"></div>
         <div class="slide" style="background-image: url('assets/canyon.jpg');"></div>
-        <div class="slide" style="background-image: url('assets/boats1.jpeg');"></div>
+        <div class="slide" style="background-image: url('assets/sunfishes.jpeg');"></div>
         <div class="slide" style="background-image: url('assets/cave_kayak.jpg');"></div>
         <div class="slide" style="background-image: url('assets/grand_canyon.jpg');"></div>
         <header>
@@ -39,20 +39,20 @@
             <h1>About Gabe</h1>
             <h2>Programmer | Creator | Artist | Nature Lover | Rock Climbing Enthusiast </h2>
         </div>
-        <img src="assets/artist_at_work.JPG">
+        <img src="assets/senior_picture_png1.png" alt="Gabe">
         <div class="bio">
             <p>Gabe is a software developer with experience in both front-end and back-end technologies. He has built and published multiple Chrome extensions and is currently developing a Gmail-related web app. His work focuses on integrating APIs, automating workflows, and enhancing user experience through well-crafted solutions.</p>
 
             <p>He emphasizes efficiency and innovation, leveraging AI to fill knowledge gaps and accelerate development. Gabe has experience with MongoDB, Oracle databases, and various web technologies, ensuring scalable and maintainable applications.</p>
 
-            <p>Beyond his personal projects, he is passionate about building practical, user-friendly tools and refining his expertise in modern web development. He is currently working on a portfolio website to showcase his art, his product 'GettaGripz,' and his education and experience.</p>
+            <!-- <p>Beyond his personal projects, he is passionate about building practical, user-friendly tools and refining his expertise in modern web development. He is currently working on a portfolio website to showcase his art, his product 'GettaGripz,' and his education and experience.</p>
 
-            <p>In his free time, he enjoys designing in Fusion 360, working on creative projects, and staying up-to-date with the latest tech trends. He also has an interest in automation, digital product development, and optimizing workflows through AI and smart tooling.</p>
+            <p>In his free time, he enjoys designing in Fusion 360, working on creative projects, and staying up-to-date with the latest tech trends. He also has an interest in automation, digital product development, and optimizing workflows through AI and smart tooling.</p> -->
 
             <p><strong>Web Technologies</strong></p>
             <p><strong>Extensive Experience:</strong> JavaScript, Chrome Extensions, HTML, CSS, MongoDB, Gmail API, and Git.</p>
-            <p><strong>Versed:</strong> Oracle, React, and automation tools.</p>
-            <p><strong>Previously Explored:</strong> Various front-end and back-end frameworks.</p>
+            <!-- <p><strong>Versed:</strong> Oracle, React, and automation tools.</p>
+            <p><strong>Previously Explored:</strong> Various front-end and back-end frameworks.</p> -->
 
             
         </div>
@@ -62,25 +62,47 @@
     <div class="section" id="programming_portfolio">
         <h1>Programming Portfolio</h1>
         <div class="proj_container">
-            <div class="proj">
-                <div>hi</div>
-            </div>
-            <div class="proj">
-                <div>jsldfkjklsdf</div>
-            </div>
-            <div class="proj">
-                <div>sfdfsdfsdfs</div>
-            </div>
+            <a class="proj" href="https://chromewebstore.google.com/detail/productube/kgdmipjacfecblnnamkccmnbimooeoek?authuser=0&hl=en" target="_blank">
+                <img src="assets/ProducTube.png" alt="ProducTube">
+                <div>
+                    <p>A chrome extension that limits and removes distractions from YouTube</p>
+                </div>
+            </a>
+            <a class="proj" href="https://chromewebstore.google.com/detail/atlasextender/agbdecajmglhpgabancmgkgnefmhbimn?authuser=0&hl=en" target="_blank">
+                <img src="assets/AtlasExtender.png" alt="AtlasExtender">
+                <div>
+                    <p>An extension that adds student testimonials from Reddit and RateMyProfessors to Atlas</p>
+                </div>
+            </a>
+            <a class="proj" href="/art/" target="_blank">
+                <img id="art_site" src="assets/art_site.png" alt="ArtPortfolio">
+                <div>
+                    <p>A webpage that displays my favorite personal visual art projects of the past decade</p>
+                </div>
+            </a>
         </div>
-
         
     </div>
 
-    <div class="section" id="contact">
-        <h1>Contact</h1>
+    <div class="section" id="extra">
     </div>
-    <!-- Additional sections here -->
+
+
     <footer>
+        <h2>Where to find Gabe</h2>
+
+        <div id="contact">
+            <a href="https://mail.google.com/mail/?fs=1&tf=cm&to=gabebass23@gmail.com" target="_blank">
+                <img src="assets/email.svg" alt="Email">
+            </a>
+            <a href="https://linkedin.com/in/gabe-bass" target="_blank">
+                <img src="assets/linkedin.svg" alt="LinkedIn">
+            </a>
+            <a href="https://github.com/GabeBass23" target="_blank">
+                <img src="assets/github.svg" alt="GitHub">
+            </a>
+        </div>
+
         <p>&copy; Gabriel Bass. All rights reserved.</p>
     </footer>
 
