signature fix part 2

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="slide" style="background-image: url('assets/grand_canyon.jpg');"></div>
         <header>
             <a href="">
-                <img class="signature" src="assets/signature.svg" alt="logo">
+                <img class="signature" src="assets/signature.png" alt="logo">
             </a>
             <nav>
                 <ul>
