--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <div class="bio">
             <p>Gabe is a software developer with experience in both front-end and back-end technologies. He has built and published multiple Chrome extensions and is currently developing a Gmail-related web app. His work focuses on integrating APIs, automating workflows, and enhancing user experience through well-crafted solutions.</p>
 
-            <p>He emphasizes efficiency and innovation, leveraging AI to fill knowledge gaps and accelerate development. Gabe has experience with MongoDB, Oracle databases, and various web technologies, ensuring scalable and maintainable applications.</p>
+            <p>He emphasizes efficiency and innovation, leveraging AI to fill knowledge gaps and accelerate development. Gabe has experience with SQL, React, and various web technologies, ensuring scalable and maintainable applications.</p>
 
             <!-- <p>Beyond his personal projects, he is passionate about building practical, user-friendly tools and refining his expertise in modern web development. He is currently working on a portfolio website to showcase his art, his product 'GettaGripz,' and his education and experience.</p>
 
             <p>In his free time, he enjoys designing in Fusion 360, working on creative projects, and staying up-to-date with the latest tech trends. He also has an interest in automation, digital product development, and optimizing workflows through AI and smart tooling.</p> -->
 
             <p><strong>Web Technologies</strong></p>
-            <p><strong>Extensive Experience:</strong> JavaScript, Chrome Extensions, HTML, CSS, MongoDB, Gmail API, and Git.</p>
+            <p><strong>Extensive Experience:</strong> JavaScript, Chrome Extensions, HTML, CSS, SQL, Gmail API, and Git.</p>
             <!-- <p><strong>Versed:</strong> Oracle, React, and automation tools.</p>
             <p><strong>Previously Explored:</strong> Various front-end and back-end frameworks.</p> -->
 
