--- a/index.html
+++ b/index.html
@@ -53,10 +53,27 @@
             <p><strong>Extensive Experience:</strong> JavaScript, Chrome Extensions, HTML, CSS, SQL, Gmail API, and Git.</p>
             <!-- <p><strong>Versed:</strong> Oracle, React, and automation tools.</p>
             <p><strong>Previously Explored:</strong> Various front-end and back-end frameworks.</p> -->
-
+            <div id="languages">
+                <a href="https://docs.python.org/3/" target="_blank" rel="noopener">
+                  <img src="icons/python.svg" alt="Python">
+                </a>
+                <a href="https://en.cppreference.com/w/" target="_blank" rel="noopener">
+                  <img src="icons/c++.svg" alt="C++">
+                </a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noopener">
+                  <img src="icons/javascript.svg" alt="JavaScript">
+                </a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank" rel="noopener">
+                  <img src="icons/html.svg" alt="HTML5">
+                </a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank" rel="noopener">
+                  <img src="icons/css.svg" alt="CSS3">
+                </a>
+            </div>
         </div>
         <img src="assets/senior_picture_png1.png" alt="Gabe">
-        <a href="assets/Resume_Gabriel_Bass.pdf" target="_blank" class="resume-button">View Gabe's Professional Resume</a>
+        
+        <a href="assets/Resume_Gabriel_Bass.pdf" target="_blank" class="resume-button">Gabe's Professional Resume</a>
     </div>
     
     <div class="section" id="programming_portfolio">
@@ -93,13 +110,13 @@
 
         <div id="contact">
             <a href="https://mail.google.com/mail/?fs=1&tf=cm&to=gabebass23@gmail.com" target="_blank">
-                <img src="assets/email.svg" alt="Email">
+                <img src="icons/email.svg" alt="Email">
             </a>
             <a href="https://linkedin.com/in/gabe-bass" target="_blank">
-                <img src="assets/linkedin.svg" alt="LinkedIn">
+                <img src="icons/linkedin.svg" alt="LinkedIn">
             </a>
             <a href="https://github.com/GabeBass23" target="_blank">
-                <img src="assets/github.svg" alt="GitHub">
+                <img src="icons/github.svg" alt="GitHub">
             </a>
         </div>
 
