--- a/index.html
+++ b/index.html
@@ -46,15 +46,12 @@
                 <h1>About Gabe</h1>
                 <h2>Programmer | Creator | Artist | Nature Lover | Rock Climbing Enthusiast </h2>
             </div>
-            <p>Gabe is a software developer with experience in both front-end and back-end technologies. He has built and published multiple Chrome extensions and is currently developing a Gmail-related web app. His work focuses on integrating APIs, automating workflows, and enhancing user experience through well-crafted solutions.</p>
+            <p>Gabe is a recently graduated computer science student and software developer with experience a variety of front-end and back-end technologies. He has built and published multiple Chrome extensions and websites, and is currently developing a Gmail-related web app. His work focuses on solving problems and taking on creative ideas no matter how much learning and research stands in his way.</p>
             <div class="bio">
     
-                <p>He emphasizes efficiency and innovation, leveraging AI to fill knowledge gaps and accelerate development. Gabe has experience with SQL, React, and various web technologies, ensuring scalable and maintainable applications.</p>
-    
-                <p><strong>Web Technologies</strong></p>
-                <p><strong>Extensive Experience:</strong> JavaScript, Chrome Extensions, HTML, CSS, SQL, Gmail API, and Git.</p>
-                <!-- <p><strong>Versed:</strong> Oracle, React, and automation tools.</p>
-                <p><strong>Previously Explored:</strong> Various front-end and back-end frameworks.</p> -->
+                <p>In fact, Gabe is a manic creative in all areas of his life. Whether it is printing a 3D mouse prototype, constructing his own sit/stand desk, or even building his own home rock climbing wall, he has lots of experience bringing a vision to life. He can't wait to hear about where your ideas could take him!</p>
+
+                <h2 style="justify-self: center;"><strong>Gabe's Languages and Frameworks</strong></h2>
                 <div id="languages">
                     <a href="https://docs.python.org/3/" target="_blank" rel="noopener">
                       <img src="icons/python.svg" alt="Python">
