--- a/art/color.html
+++ b/art/color.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/general.css">
     <link rel="stylesheet" type="text/css" href="css/frame.css">
     <link rel="stylesheet" type="text/css" href="css/color.css">
+    <link rel="icon" href="../assets/palette_spinner.png">
     <script defer src="js/picture_frame.js"></script>
     <script defer src="js/nav.js"></script>
     <title>Color</title>
