--- a/art/index.html
+++ b/art/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/general.css">
     <link rel="stylesheet" type="text/css" href="css/frame.css">
+    <link rel="icon" href="../assets/palette_spinner.png">
     <title>Homepage</title>
 </head>
 
