--- a/art/pencil.html
+++ b/art/pencil.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/general.css">
     <link rel="stylesheet" type="text/css" href="css/frame.css">
     <link rel="stylesheet" type="text/css" href="css/pencil.css">
+    <link rel="icon" href="../assets/palette_spinner.png">
     <title>Grayscale</title>
 </head>
 <header>
