--- a/gettagripz/index.html
+++ b/gettagripz/index.html
@@ -52,12 +52,13 @@
             <div class="grip_photos">
 
                 <div class="grip_photo">
+                    At home
                 </div>
                 <div class="grip_photo">
-
+                    At the gym
                 </div>
                 <div class="grip_photo">
-
+                    At the crag
                 </div>
             </div>
             
