--- a/gettagripz/index.html
+++ b/gettagripz/index.html
@@ -68,7 +68,7 @@
                         <h5>TESTIMONIALS</h5>
                         <h2>WHAT OUR <br>CUSTOMERS SAY</h2>
                         <div class="divider divider_white"><span></span></div>
-                        <p class="review_text">I got this device to work on my spelunking strength. Unfortunately I crushed the solid wood in my incredibly strong bat hands. I was also dissapointed it didn't come in black. 2 stars</p>
+                        <p class="review_text">I got this device to work on my spelunking strength. Unfortunately I crushed the solid wood in my incredibly strong bat hands. I was also disappointed it didn't come in black. 2 stars</p>
                         <span class="reviewer">Batman</span>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                 <div class="features">
                     <div class="feature_cover">
                         <h5>FEATURES</h5>
-                        <h2>4 CRIMPS <br> 2 PINCHES</h2>
+                        <h2>4 CRIMPS <br> 2 PINCHES <br> 1 POCKET</h2>
                         <div class="divider"><span></span></div>
                         <img class="grip_img" src="images/grip.png" alt="Grip">
                         <a href="https://youtube.com/shorts/rxbEtpaNN1Y" target="_blank" class="tutorial_button">TUTORIAL VIDEO</a>
@@ -92,13 +92,13 @@
             <div class="purchase"> 
                 <div class="product_page">
                     <div class="thumbnails">
-                        <img src="images/grip.png" alt="Thumbnail 1">
                         <img src="images/Product_image.jpg" alt="Thumbnail 3">
+                        <img src="images/grip.png" alt="Thumbnail 1">
                     </div>
 
                     <div class="main-image">
                         <div class="zoom-wrapper">
-                            <img id="mainDisplay" src="images/grip.png" alt="Main Product">
+                            <img id="mainDisplay" src="images/Product_image.jpg" alt="Main Product">
                             <div id="zoomLens"></div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                 </div>
 
                 
-                <div class="purchase-container">
+                <div class="purchase_container">
                     <paypal-cart-button data-id="pp-view-cart"></paypal-cart-button>
                     <script>
                         cartPaypal.Cart({ id: "pp-view-cart" })
