more mobile fixes

--- a/gettagripz/index.html
+++ b/gettagripz/index.html
@@ -61,6 +61,7 @@
                     At the crag
                 </div>
             </div>
+
             
             <div class="testimonials">
                 <div class="color_cover">
@@ -77,9 +78,11 @@
                 
                 <div class="features">
                     <div class="feature_cover">
-                        <h5>FEATURES</h5>
-                        <h2>4 CRIMPS <br> 2 PINCHES <br> 1 POCKET</h2>
-                        <div class="divider"><span></span></div>
+                        <div class="fc_header">
+                            <h5>FEATURES</h5>
+                            <h2>4 CRIMPS <br> 2 PINCHES <br> 1 POCKET</h2>
+                            <div class="divider"><span></span></div>
+                        </div>
                         <img class="grip_img" src="images/grip.png" alt="Grip">
                         <a href="https://youtube.com/shorts/rxbEtpaNN1Y" target="_blank" class="tutorial_button">TUTORIAL VIDEO</a>
                     </div>
