--- a/gettagripz/index.html
+++ b/gettagripz/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="/icons/grip.png">
 
-    <link rel="stylesheet" href="css/ah.css">
+    <link rel="stylesheet" href="css/ah2.css">
 
     <script src="https://www.paypalobjects.com/ncp/cart/cart.js" data-merchant-id="AQ2FPBPATXU3Q"></script>
 
@@ -146,6 +146,9 @@
         <div id="connect">
             <a href="https://mail.google.com/mail/?fs=1&tf=cm&to=getagettagripz@gmail.com" target="_blank">
                 <img src="icons/email.svg" alt="Email">
+            </a>
+            <a href="https://www.etsy.com/listing/1827271110/gettagripz-portable-multi-grip-grip" target="_blank">
+                <img src="icons/etsy.svg" alt="Etsy">
             </a>
             <a href="https://www.instagram.com/getta_gripz/" target="_blank">
                 <img src="icons/instagram.svg" alt="Instagram">
