bad naming fixes

--- a/gettagripz/index.html
+++ b/gettagripz/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="/icons/grip.png">
 
-    <link rel="stylesheet" href="css/ah.css">
+    <link rel="stylesheet" href="css/gettaStyles.css">
 
     <script src="https://www.paypalobjects.com/ncp/cart/cart.js" data-merchant-id="AQ2FPBPATXU3Q"></script>
 
