inage swap and fixes

--- a/gettagripz/index.html
+++ b/gettagripz/index.html
@@ -95,7 +95,7 @@
             <div class="purchase"> 
                 <div class="product_page">
                     <div class="thumbnails">
-                        <img src="images/Product_image.jpg" alt="Thumbnail 3">
+                        <img src="images/WhatYouGet.png" alt="Thumbnail 3">
                         <img src="images/grip.png" alt="Thumbnail 1">
                     </div>
 
