Added all images

--- a/gettagripz/index.html
+++ b/gettagripz/index.html
@@ -51,13 +51,13 @@
         <section id="about">
             <div class="grip_photos">
 
-                <div class="grip_photo">
+                <div class="at_home grip_photo">
                     At home
                 </div>
-                <div class="grip_photo">
+                <div class="at_gym grip_photo">
                     At the gym
                 </div>
-                <div class="grip_photo">
+                <div class="at_crag grip_photo">
                     At the crag
                 </div>
             </div>
@@ -101,7 +101,7 @@
 
                     <div class="main-image">
                         <div class="zoom-wrapper">
-                            <img id="mainDisplay" src="images/Product_image.jpg" alt="Main Product">
+                            <img id="mainDisplay" src="images/WhatYouGet.png" alt="Main Product">
                             <div id="zoomLens"></div>
                         </div>
                     </div>
