--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li><a href="#programming_portfolio">Portfolio</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="art" target="_blank">Art</a></li>
-                        <li><a href="gettagripz" target="_blank">GettaGripz</a></li>
+                        <li><a href="https://gettagripz.store" target="_blank">GettaGripz</a></li>
                     </ul>
                 </nav>
             </header>
