--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             window.addEventListener("load", function() {
                 setTimeout(function() {
                   $(loader).hide();
+                  $(content).show();
                 }, 2000);
               });
             
